fix(style.css): align book 'title' and 'author' blocks

--- a/style.css
+++ b/style.css
@@ -62,9 +62,18 @@ body {
         }
 
         & .book__info {
-            display: flex;
-            align-items: center;
-            gap: 16px;
+            text-align: center;
+            padding-top: 1em;
+            border-top: 5px solid black;
+            min-width: 100%;
+        }
+
+        & h2 {
+            font-size: 2rem;
+        }
+
+        & h4 {
+            font-size: 1.2rem;
         }
 
         & .reader__info {
